# Intrusion-prevention-system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mk.sh  mv.sh
src/: common.h  init_env.c  init_env.h  ips_util.c  ips_util.h  main.c  pkt_decoder.c  pkt_decoder.h  pkt_reader.c  pkt_reader.h  read_manager.c  thr_manager.c  thr_manager.h
